# RedRing

./: .editorconfig  .gitattributes  .gitignore  .vscodeignore  .yamllint.yml  AI_DEV_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_DEPENDENCY_CHECKLIST.md  ARCHITECTURE_DESIGN_PLAN.md  ARCHITECTURE_MIGRATION_PLAN.md  ARCHITECTURE_RESTRUCTURE_PROPOSAL.md  ARC_NAMESPACE_ARCHITECTURE_ANALYSIS.md  BBOX_DESIGN_CONTRADICTION_ANALYSIS.md  CIRCLE_IMPROVEMENT_PROPOSAL.md  CONSTANTS_INTEGRATION_STRATEGY.md  CORE_EXTENSION_FOUNDATION_PATTERN.md  Cargo.toml  DOCS_RESTRUCTURE_PROPOSAL.md  FOUNDATION_ARCHITECTURE_FLATTENING_REPORT.md  FOUNDATION_DESIGN_PATTERNS.md  FOUNDATION_INTEGRATION_COMPLETION_REPORT.md  FOUNDATION_NAMING_OPTIMIZATION_REPORT.md  FOUNDATION_PATTERN_GUIDE.md  FOUNDATION_SYSTEM_DESIGN.md  GENERIC_FAILURE_ANALYSIS.md  GEOMETRY_TRAIT_REDESIGN.md  GEO_FOUNDATION_PRIMITIVES_CONSISTENCY_ANALYSIS.md  GITHUB_PAGES_SETTINGS_CHECKLIST.md  GITHUB_PAGES_SETUP.md  HELPERS_MIGRATION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  INFORMATION_MANAGEMENT_TRANSITION.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  METRICS_MIGRATION_ANALYSIS.md  MIGRATION_VECTOR_F64.md  NAMING_CONVENTIONS.md  NAMING_CORRECTION_REPORT.md  NAMING_UNIFICATION_PROGRESS.md  (+26 more)
analysis/: Cargo.toml  VECTOR_CONSTANTS_USAGE.md
analysis/src/: consts.rs  consts_tests.rs  curves.rs  geometry.rs  interpolation.rs  interpolation_tests.rs  lib.rs  linalg.rs  mod.rs  numerical.rs  numerical_methods.rs  numerical_tests.rs  sampling.rs  sampling2d.rs  statistics.rs  statistics_tests.rs
analysis/src/abstract_types/: angle.rs  mod.rs  scalar.rs  tolerance.rs
analysis/src/approximations/: ellipse.rs
analysis/src/linalg/: mod.rs  quaternion.rs  scalar.rs  scalar_tests.rs
analysis/src/linalg/matrix/: matrix2.rs  matrix2_tests.rs  matrix3.rs  matrix3_tests.rs  matrix4.rs  mod.rs
analysis/src/linalg/solver/: cramer.rs  gaussian.rs  lu.rs  mod.rs
analysis/src/linalg/unit_tests/: mod.rs  quaternion.rs  scalar.rs  solver.rs  vector.rs
analysis/src/linalg/vector/: dynamic.rs  mod.rs  vector.rs  (+5 more)
analysis/src/metrics/: area_volume.rs  distance.rs  distance_length_tests.rs  mod.rs
analysis/src/numerics/: constants.rs  mod.rs
analysis/src/unit_tests/: interpolation.rs  mod.rs  numerical.rs  numerical_additional_tests.rs  sampling.rs  scalar_tests.rs  statistics.rs  statistics_tests.rs
geo_core/: Cargo.toml
geo_core/src/: angle.rs  lib.rs  point3d.rs  primitives.rs  primitives2d.rs  primitives3d.rs  robust.rs  scalar.rs  tolerance.rs  vector.rs  vector2d.rs  vector3d.rs
geo_core/src/approximations/: curves.rs  curves_tests.rs  ellipse.rs  ellipse_tests.rs  mod.rs  tests.rs
geo_core/src/metrics/: area_volume_tests.rs  distance.rs  length.rs  length_tests.rs  mod.rs  tests.rs
geo_core/src/unit_tests/: lib.rs  mod.rs  primitives2d.rs  primitives3d.rs  robust.rs  scalar.rs  tolerance.rs  vector.rs
geo_io/: Cargo.toml
geo_io/src/: lib.rs  stl.rs
geo_primitives/: Cargo.toml
geo_primitives/src/: LEGACY_MIGRATION.md  arc_2d.rs  arc_2d_collision.rs  arc_2d_containment.rs  arc_2d_extensions.rs  arc_2d_intersection.rs  arc_2d_metrics.rs  arc_2d_sampling.rs  arc_2d_tests.rs  arc_2d_transform.rs  arc_3d.rs  arc_3d_backup.rs  arc_3d_extensions.rs  arc_3d_tests.rs  bbox_2d.rs  bbox_2d_builder_tests.rs  bbox_2d_extensions.rs  bbox_2d_tests.rs  bbox_2d_transform.rs  bbox_3d.rs  bbox_3d_builder_tests.rs  bbox_3d_extensions.rs  bbox_3d_tests.rs  bbox_3d_transform.rs  cad_circle.rs  cad_direction.rs  cad_ellipse.rs  cad_ellipse_arc.rs  cad_point.rs  cad_primitives.rs  cad_shapes.rs  cad_vector.rs  circle.rs  circle2d.rs  circle_2d.rs  circle_2d_extensions.rs  circle_2d_metrics.rs  circle_2d_tests.rs  circle_2d_transform.rs  circle_3d.rs  (+95 more)
geo_primitives/src/f64geom/: circle3.rs  direction3.rs  line_segment3.rs  plane.rs  point3.rs  vector3.rs
geo_primitives/src/geometry2d/: arc.rs  bbox.rs  bbox2d.rs  circle.rs  direction.rs  ellipse.rs  ellipse_arc.rs  infinite_line.rs  line.rs  mod.rs  point.rs  point2d.rs  polygon.rs  ray.rs  triangle.rs  vector.rs  vector2d.rs
geo_primitives/src/geometry3d/: arc.rs  bbox.rs  bbox3d.rs  circle.rs  circle3d.rs  direction.rs  direction3d.rs  direction_backup.rs  direction_generic.rs  ellipse.rs  ellipse_arc.rs  infinite_line.rs  line.rs  line_segment3d.rs  mesh.rs  mod.rs  plane.rs  point.rs  point3d.rs  polygon.rs  ray.rs  triangle.rs  vector.rs  vector3d.rs
geo_primitives/src/surface/: cone.rs  cylinder.rs  ellipsoid.rs  mod.rs  sphere.rs  torus.rs
geo_primitives/src/traits/: bbox_trait.rs  mod.rs  normalizable.rs  vector.rs  vector2d_ext.rs  vector3d_ext.rs  vector_traits.rs
geo_primitives/src/unit_tests/: arc.rs  arc3d_tests.rs  arc_tests.rs  bbox2d.rs  bbox2d_tests.rs  bbox3d.rs  bbox3d_tests.rs  bbox_trait_tests.rs  cad_tests.rs  circle.rs  circle3d_basic_tests.rs  circle3d_tests.rs  circle_parametric_tests.rs  classification_tests.rs  common.rs  direction.rs  direction2d_generic_tests.rs  direction3d_generic_tests.rs  direction_tests.rs  ellipse3d_tests.rs  ellipse_tests.rs  f32_compatibility_tests.rs  geometry.rs  geometry_bbox.rs  geometry_utils_tests.rs  infinite_line.rs  infinite_line2d_tests.rs  infinite_line3d_tests.rs  mod.rs  point3d.rs  point3d_tests.rs  point_basic_ops_tests.rs  point_parametric_tests.rs  primitive_trait_tests.rs  ray.rs  ray_basic_ops_tests.rs  sphere_tests.rs  test_utils.rs  traits.rs  traits_tests.rs  (+8 more)
geo_primitives/src/util/: axis_angle.rs  mod.rs
geo_primitives/tests/: f64geom_basic.rs
model/geo_commons/: Cargo.toml
model/geo_commons/src/: lib.rs
model/geo_nurbs/: Cargo.toml
model/geo_nurbs/src/: basis.rs  curve_2d.rs  curve_3d.rs  error.rs  foundation_impl.rs  knot.rs  lib.rs  surface.rs  transform.rs  weight_storage.rs
redring/: Cargo.toml
redring/src/: app.rs  app_renderer.rs  app_state.rs  camera.rs  device.rs  graphic.rs  lib.rs  main.rs  mouse_input.rs  pipeline.rs  render.rs  renderer.rs  shader.wgsl  stl_loader.rs  surface.rs  window.rs
viewmodel/converter/: Cargo.toml
viewmodel/converter/src/: lib.rs  mesh_converter.rs  stl_loader.rs
(+680 files in other folders)
