[workspace]
members = [
    "analysis",        # 新規：数値解析クレート
    "geo_foundation",  # 新規：幾何計算基盤（抽象型・橋渡し）
    "geo_core",        # 新規：幾何計算基盤
    "geo_primitives",  # 新規：幾何プリミティブクレート
    "geo_algorithms",  # 新規：幾何アルゴリズムクレート
    "geo_io",          # 新規：ファイルI/Oクレート
    "model",
    "viewmodel",
    "render",
    "redring",         # メインクレート
    "stage"
, "geo_algorithms", "geo_foundation"]
resolver = "3"

[workspace.dependencies]
pollster = "0.4.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
