[workspace]
members = [
    "analysis",                # 独立：数値解析クレート（汎用基盤）
    "model/geo_foundation",    # Model層：幾何計算基盤（抽象型・橋渡し）
    "model/geo_core",          # Model層：幾何計算基盤
    "model/geo_primitives",    # Model層：幾何プリミティブクレート
    "model/geo_algorithms",    # Model層：幾何アルゴリズムクレート
    "model/geo_io",            # Model層：ファイルI/Oクレート
    "viewmodel/converter",     # ViewModel層：データ変換・架け橋
    "view/render",             # View層：GPU描画基盤
    "view/stage",              # View層：レンダリングステージ管理
    "view/app",                # View層：メインアプリケーション
]
resolver = "3"

[workspace.dependencies]
pollster = "0.4.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
