[package]
name = "analysis"
version = "0.1.0"
edition = "2021"
description = "Numerical analysis and geometric sampling for RedRing CAD/CAM"
license = "MIT"

[dependencies]
geo_core = { path = "../geo_core" }
geo_algorithms = { path = "../geo_algorithms" }
geo_primitives = { path = "../geo_primitives" }

[dev-dependencies]
approx = "0.5"

[features]
default = []
