[package]
name = "geo_primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
geo_core = { path = "../geo_core" }
model = { path = "../model" }
analysis = { path = "../analysis" }

[features]
default = []
serde = ["dep:serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true
