[package]
name = "geo_primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
geo_core = { path = "../geo_core" }
analysis = { path = "../analysis", optional = true }

[features]
default = []
serde = ["dep:serde"]
# Enable legacy CAD_* adapter layer until primitive parity completed
cad-legacy = ["analysis"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true
