[package]
name = "redring"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30"
wgpu = "27.0.1"
smol_str = "0.3.2"
pollster.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
viewmodel = { path = "../viewmodel" }
model = { path = "../model" }
render = { path = "../render" }
stage = { path = "../stage" }
geo_io = { path = "../geo_io" }
geo_primitives = { path = "../geo_primitives" }
geo_foundation = { path = "../geo_foundation" }
